--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "listener",
+  "name": "mpesa_listener",
   "version": "1.0.0",
   "description": "listener file",
-  "main": "index.js",
+  "main": "listener.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "body-parser": "^1.17.1",
-  "express": "^4.15.2",
-"prettyjson": "1.2.1"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "prettyjson": "1.2.1"
   }
 }
